# ReconocimientoFacialEmociones

./: .gitignore  README.md  dockerignore  pyproject.toml  requirements.runtime.txt  requirements.txt
docker/: Dockerfile  docker-compose.yml
notebooks/: 02_prototipo_cnn.ipynb  cnn_best.pt  cnn_best_exp1.pt
scripts/: check_dataloader.py
src/ReconocimientoFacialEmociones.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/backen/: index.html  inference.py  main.py
src/fer/models/cnn/: model.py
src/fer/models/vit/: eval_model.py  factory.py  model.py
src/fer/train/: 02_prototipo_cnn.ipynb  03_prototipo_vit.ipynb
