[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ReconocimientoFacialEmociones"
version = "0.1.0"
description = "CNN & ViT emotion recognition with FastAPI and Docker"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Diego Ramirez Lacalle" }]
dependencies = [
	# --- Core Python ---
	"numpy>=1.24.0",
	"pandas>=2.0.0",
	"scipy>=1.10.0",

	# --- Deep Learning ---
	"timm>=1.0.3",
	"transformers>=4.44.0",
	"albumentations>=1.4.0",

	# --- Computer Vision & Preprocesado ---
	"opencv-python>=4.9.0",
	"mediapipe>=0.10.0",
	"mtcnn>=0.1.1",
	"Pillow>=10.0.0",

	# --- API y Backend ---
	"fastapi>=0.111.0",
	"uvicorn[standard]>=0.30.0",
	"pydantic>=2.7.0",
	"python-multipart>=0.0.9",
	"requests>=2.31.0",

	# --- Utilidades y gestión de configuración ---
	"pyyaml>=6.0.2",
	"tqdm>=4.66.0",
	"rich>=13.7.0",
	"wandb>=0.17.0",
	"matplotlib>=3.9.0",
	"seaborn>=0.13.0",

	# --- Testing y calidad de código ---
	"pytest>=8.2.0",
	"pytest-cov>=5.0.0",
	"flake8>=7.0.0",
	"black>=24.3.0",

	# --- Jupyter (para notebooks) ---
	"jupyter>=1.0.0",
	"notebook>=7.2.0",
	"ipykernel>=6.29.0",

	# --- Deploy y entorno ---
	"python-dotenv>=1.0.1",
	"gunicorn>=22.0.0",
]

	# Nota: Para GPU/CUDA en Windows, instala PyTorch con ruedas CUDA oficiales.
	# Ejemplo (CUDA 12.1):
	#   python -m pip install --index-url https://download.pytorch.org/whl/cu121 \
	#       torch==2.1.0 torchvision==0.16.0

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

